<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdFragment"
    tools:ignore="MissingClass">

    <LinearLayout
        android:id="@+id/loUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtProducto"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/F3_producto"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="parent" />

        <EditText
            android:id="@+id/etProducto"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/producto"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/txtProducto" />


        <TextView
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/F3_cantidad"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/etProducto" />

        <EditText
            android:id="@+id/etCantidad"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:textAlignment="center"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@id/loCentro"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/loDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loUp">


        <RadioGroup
            android:id="@+id/RGMedida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="2dp">

            <RadioButton
                android:id="@+id/rbKg"

                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/kg" />

            <RadioButton
                android:id="@+id/rbG"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/gr"

                />

            <RadioButton
                android:id="@+id/rbPaquetes"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/paquetes" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loDown"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loCentro">

        <Button
            android:id="@+id/bInsertar"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:background="@drawable/bordes_redondos"
            android:text="@string/a_adir_a_mi_compra"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bModificar"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bordes_redondos"
            android:text="@string/modificar_el_producto"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bEliminar"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bordes_redondos"
            android:text="@string/eliminar_de_mi_compra"
            android:textAlignment="center"
            android:textColor="@color/white"
            />


    </LinearLayout>


</LinearLayout>