<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginBottom="2dp"

    android:background="@drawable/bordes_redondos">


    <TextView
        android:id="@+id/idProducto"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:textSize="15sp"
        android:text="@string/producto"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idCantidad"
        android:gravity="center"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:text="@string/cantidad"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/idUnidad"
        android:gravity="center"
        android:layout_width="40dp"
        android:textSize="16sp"
        android:layout_height="40dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="20dp"
        android:text="@string/unidad"

        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/idCategoria"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="20dp"
        android:text="@string/unidad"
        android:visibility="invisible"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/idImagen"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="350dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>